--- a/src/main/webapp/resources/css/shepherd.css
+++ b/src/main/webapp/resources/css/shepherd.css
@@ -79,13 +79,13 @@
     top: 0;
     transition: all .3s ease-out, height 0ms .3s, opacity .3s 0ms;
     width: 100vw;
-    z-index: 9997
+    z-index: 9997;
 }
 
 .shepherd-modal-overlay-container.shepherd-modal-is-visible {
     height: 100vh;
     opacity: .5;
-    transition: all .3s ease-out, height 0s 0s, opacity .3s 0s
+    transition: all .3s ease-out, height 0s 0s, opacity .3s 0s;
 }
 
 .shepherd-modal-overlay-container.shepherd-modal-is-visible path {
