--- a/src/main/webapp/resources/css/helpmenu.css
+++ b/src/main/webapp/resources/css/helpmenu.css
@@ -272,6 +272,35 @@
     top: 0;
 }
 
+.slide.--with-media .media {
+    max-width: 100%;
+    max-height: 400px;
+}
+
+.slide.--with-media.--besides .media {
+    max-width: calc(50% - 5px);
+}
+
+.slide.--with-media .shepherd-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.slide.--with-media.--besides .shepherd-text{
+    flex-direction: row;
+}
+
+
+.slide.--with-media.--above .shepherd-text .text{
+    order: 2;
+}
+
+.slide.--with-media.--above .shepherd-text .media{
+    order: 1;
+}
+
 
 
 
