add page delimiter to text result generation

--- a/src/main/webapp/resources/css/ocr4allweb.css
+++ b/src/main/webapp/resources/css/ocr4allweb.css
@@ -407,3 +407,7 @@ label[for*="backupCheckbox"]{
 #emptyLines-row form {
   padding-left: 50px;
 }
+
+#pageDelimiter-row form {
+  padding-left: 50px;
+}
